tests/baselines/reference/importEquals1.errors.txt
/b.ts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
/c.ts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
/d.ts(2,5): error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
/e.ts(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
/e.ts(2,5): error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
/f.ts(2,5): error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
/g.ts(2,5): error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.


==== /a.ts (0 errors) ====
    export class A {}
    
==== /b.ts (1 errors) ====
    import type * as types from './a';
    export = types; // Error
    ~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== /c.ts (1 errors) ====
    import * as types from './a';
    export = types;
    ~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== /d.ts (1 errors) ====
    import types from './b';
    new types.A(); // Error
        ~~~~~
!!! error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 /b.ts:1:18: 'types' was imported here.
    
==== /e.ts (2 errors) ====
    import types = require('./b');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    new types.A(); // Error
        ~~~~~
!!! error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 /b.ts:1:18: 'types' was imported here.
    
==== /f.ts (1 errors) ====
    import * as types from './b';
    new types.A(); // Error
        ~~~~~
!!! error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 /b.ts:1:18: 'types' was imported here.
    
==== /g.ts (1 errors) ====
    import type types from './c'
    new types.A(); // Error
        ~~~~~
!!! error TS1361: 'types' cannot be used as a value because it was imported using 'import type'.
!!! related TS1376 /g.ts:1:8: 'types' was imported here.
    